# Gaussian-Sampler

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.f90  sample.f90
